解决拍照旋转角度问题

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">多图选择</string>
+    <string name="app_name">Android 拍照/相册</string>
 
     <string name="action_settings">设置</string>
 
