--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MultiImageSelector</string>
+    <string name="app_name">Android Camera/Photo</string>
 
     <string name="action_settings">Settings</string>
     <string name="select_mode">Select Mode</string>
